Add required timeout_minutes field

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -52,6 +52,7 @@ jobs:
       - name: Check redirect
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
@@ -85,6 +86,7 @@ jobs:
       - name: Check dependencies
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
@@ -119,6 +121,7 @@ jobs:
       - name: Check dependencies
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
@@ -153,6 +156,7 @@ jobs:
       - name: Check dependencies
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
@@ -187,6 +191,7 @@ jobs:
       - name: Check dependencies
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
@@ -221,6 +226,7 @@ jobs:
       - name: Check dependencies
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
@@ -255,6 +261,7 @@ jobs:
       - name: Check dependencies
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
@@ -289,6 +296,7 @@ jobs:
       - name: Check dependencies
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
@@ -323,6 +331,7 @@ jobs:
       - name: Check dependencies
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
@@ -357,6 +366,7 @@ jobs:
       - name: Check dependencies
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
@@ -396,6 +406,7 @@ jobs:
       - name: Check dependencies
         uses: nick-fields/retry@v2
         with:
+          timeout_minutes: 60
           max_attempts: 3
           retry_on: error
           command: |
