Revert "Remove setup-swift and checkout stages"
This reverts commit 07a24f20ae9ded9893ea65a85c7c27111aa3181c.

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -41,6 +41,13 @@ jobs:
       OUTPUT_FILE: out_0.json
     runs-on: ubuntu-20.04
     steps:
+      - uses: fwal/setup-swift@v1
+        with:
+          swift-version: ${{ env.SWIFT_VERSION }}
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
@@ -70,6 +77,13 @@ jobs:
       OUTPUT_FILE: out_1.json
     runs-on: ubuntu-20.04
     steps:
+      - uses: fwal/setup-swift@v1
+        with:
+          swift-version: ${{ env.SWIFT_VERSION }}
+
+      - name: Checkout
+        uses: actions/checkout@v2
+
       - name: Download artifacts
         uses: actions/download-artifact@v3
         with:
