Use Swift 5.7 nightly to start accepting 5.7 only packages

--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -5,7 +5,7 @@ on:
     types: [opened, reopened]
 
 env:
-  SWIFT_IMAGE: swift:5.6-focal
+  SWIFT_IMAGE: swiftlang/swift:nightly-5.7-focal
 
 jobs:
   add:
