Switch to 5.7 release version

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
     types: [submitted]
 
 env:
-  SWIFT_IMAGE: swiftlang/swift:nightly-5.7-focal
+  SWIFT_IMAGE: swift:5.7-focal
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
