[autopr] add denylist.json to commit
Made a mistake with the last contribution where the changes to the denylist.json were being made but not committed and as such the PR did not contain the changes.

This should fix that.

--- a/.github/workflows/issues.yml
+++ b/.github/workflows/issues.yml
@@ -107,6 +107,7 @@ jobs:
         with:
           add-paths: |
             packages.json
+            denylist.json
           commit-message: ${{ github.event.issue.title }}
           title: ${{ github.event.issue.title }}
           branch: spi-auto-${{ github.event.issue.number }}
