Switch to forked setup-swift

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -16,7 +16,7 @@ jobs:
   build_validator:
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -41,7 +41,7 @@ jobs:
       OUTPUT_FILE: out_0.json
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -77,7 +77,7 @@ jobs:
       OUTPUT_FILE: out_1.json
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -116,7 +116,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -151,7 +151,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -186,7 +186,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -221,7 +221,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -256,7 +256,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -291,7 +291,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -326,7 +326,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -361,7 +361,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -396,7 +396,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -431,7 +431,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -466,7 +466,7 @@ jobs:
     # -- common --
     runs-on: ubuntu-20.04
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
@@ -502,7 +502,7 @@ jobs:
       OUTPUT_FILE: out_9.json    # $NUMBER_OF_CHUNKS - 1
     # -- end of config --
     steps:
-      - uses: fwal/setup-swift@v1
+      - uses: SwiftPackageIndex/setup-swift@main
         with:
           swift-version: ${{ env.SWIFT_VERSION }}
 
