Re-enable check_redirects_0

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -31,40 +31,36 @@ jobs:
             validator
 
 
-  # check_redirects_0:
-  #   needs: build_validator
-  #   env:
-  #     CHUNK: "0"
-  #     OUTPUT_FILE: out_0.json
-  #   runs-on: ubuntu-20.04
-  #   steps:
-  #     - uses: swift-actions/setup-swift@main
-  #       with:
-  #         swift-version: ${{ env.SWIFT_VERSION }}
+  check_redirects_0:
+    needs: build_validator
+    env:
+      CHUNK: "0"
+      OUTPUT_FILE: out_0.json
+    runs-on: ubuntu-20.04
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
 
-  #     - name: Checkout
-  #       uses: actions/checkout@v3
+      - name: Download artifacts
+        uses: actions/download-artifact@v3
+        with:
+          name: artifact
 
-  #     - name: Download artifacts
-  #       uses: actions/download-artifact@v3
-  #       with:
-  #         name: artifact
+      - name: Check redirect
+        uses: nick-fields/retry@v2
+        with:
+          timeout_minutes: 60
+          max_attempts: 3
+          retry_on: error
+          command: |
+            chmod +x ./validator
+            ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2
 
-  #     - name: Check redirect
-  #       uses: nick-fields/retry@v2
-  #       with:
-  #         timeout_minutes: 60
-  #         max_attempts: 3
-  #         retry_on: error
-  #         command: |
-  #           chmod +x ./validator
-  #           ./validator check-redirects -i packages.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks 2
-
-  #     - name: Upload artifacts
-  #       uses: actions/upload-artifact@v3
-  #       with:
-  #         path: |
-  #           ${{ env.OUTPUT_FILE }}
+      - name: Upload artifacts
+        uses: actions/upload-artifact@v3
+        with:
+          path: |
+            ${{ env.OUTPUT_FILE }}
 
 
   # check_redirects_1:
