--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,7 +9,7 @@ on:
     types: [submitted]
 
 env:
-  SWIFT_IMAGE: swiftlang/swift@sha256:8019d8ab3de09d6707ad97c7d36e7e4f4cb45c04df99527ebd295d7cbea95b11  # swiftlang/swift:nightly-5.9-focal
+  SWIFT_IMAGE: swiftlang/swift@sha256:f212429011a4c3592ffaa660fd78b5bc149e9df7920da02dfc0e7a761582fa10  # swiftlang/swift:nightly-5.9-focal 2023-08-16
   GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
 jobs:
