Change over to check-dependencies2

--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -18,7 +18,9 @@ jobs:
     steps:
       - name: Build validator
         run: |
-          git clone https://github.com/SwiftPackageIndex/PackageList-Validator.git --depth 1
+          # FIXME: drop -b parameter after testing is complete
+          git clone https://github.com/SwiftPackageIndex/PackageList-Validator.git --depth 1 \
+            -b api-based-dependency-check
           cd PackageList-Validator
           swift build
           cp $(swift build --show-bin-path)/validator $GITHUB_WORKSPACE/
@@ -100,379 +102,11 @@ jobs:
             redirect-checked.json
 
 
-  check_dependencies_0:
-    needs: check_redirects_1  # reference previous step
-    env:
-      CHUNK: "0"
-      OUTPUT_FILE: out_0.json
-    # -- common --
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy  
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  check_dependencies_1:
-    needs: check_dependencies_0  # reference previous step
-    env:
-      CHUNK: "1"
-      OUTPUT_FILE: out_1.json
-    # -- common --
+  check_dependencies:
+    needs: check_redirects_1
     runs-on: ubuntu-latest
     container:
       image: swift:5.9-jammy
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  check_dependencies_2:
-    needs: check_dependencies_1  # reference previous step
-    env:
-      CHUNK: "2"
-      OUTPUT_FILE: out_2.json
-    # -- common --
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  check_dependencies_3:
-    needs: check_dependencies_2  # reference previous step
-    env:
-      CHUNK: "3"
-      OUTPUT_FILE: out_3.json
-    # -- common --
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  check_dependencies_4:
-    needs: check_dependencies_3  # reference previous step
-    env:
-      CHUNK: "4"
-      OUTPUT_FILE: out_4.json
-    # -- common --
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  check_dependencies_5:
-    needs: check_dependencies_4  # reference previous step
-    env:
-      CHUNK: "5"
-      OUTPUT_FILE: out_5.json
-    # -- common --
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  check_dependencies_6:
-    needs: check_dependencies_5  # reference previous step
-    env:
-      CHUNK: "6"
-      OUTPUT_FILE: out_6.json
-    # -- common --
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  check_dependencies_7:
-    needs: check_dependencies_6  # reference previous step
-    env:
-      CHUNK: "7"
-      OUTPUT_FILE: out_7.json
-    # -- common --
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  check_dependencies_8:
-    needs: check_dependencies_7  # reference previous step
-    env:
-      CHUNK: "8"
-      OUTPUT_FILE: out_8.json
-    # -- common --
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  check_dependencies_9:
-    needs: check_dependencies_8  # reference previous step
-    env:
-      CHUNK: "9"
-      OUTPUT_FILE: out_9.json
-    # -- common --
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  check_dependencies_10:
-    needs: check_dependencies_9  # reference previous step
-    env:
-      CHUNK: "10"
-      OUTPUT_FILE: out_10.json
-    # -- common --
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    steps:
-      - name: Download artifacts
-        uses: actions/download-artifact@v3
-        with:
-          name: artifact
-
-      - name: Check dependencies
-        uses: nick-fields/retry@v2
-        with:
-          timeout_minutes: 60
-          max_attempts: 3
-          retry_on: error
-          command: |
-            chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-
-      - name: Upload artifacts
-        uses: actions/upload-artifact@v3
-        with:
-          path: |
-            ${{ env.OUTPUT_FILE }}
-            .packageDumpCache
-
-
-  # $NUMBER_OF_CHUNKS - 1
-  check_dependencies_last:
-    needs: check_dependencies_10 # $NUMBER_OF_CHUNKS - 2
-    runs-on: ubuntu-latest
-    container:
-      image: swift:5.9-jammy
-    env:
-      CHUNK: "11"                 # $NUMBER_OF_CHUNKS - 1
-      OUTPUT_FILE: out_11.json    # $NUMBER_OF_CHUNKS - 1
-    # -- end of config --
     steps:
       # we need to check out the repo in the last step in order to create a PR
       - name: Checkout
@@ -491,11 +125,10 @@ jobs:
           retry_on: error
           command: |
             chmod +x ./validator
-            ./validator check-dependencies -i redirect-checked.json -o $OUTPUT_FILE --chunk $CHUNK --number-of-chunks $NUMBER_OF_CHUNKS
-            ./validator merge-lists out_*.json -o packages.json
+            ./validator check-dependencies2 -i redirect-checked.json -o packages.json
             ./validator apply-deny-list -p packages.json -d denylist.json
             # Stop artifacts from appearing in the PR
-            rm out_*.json redirect-checked.json validator .packageDumpCache
+            rm redirect-checked.json validator .packageDumpCache
       - name: Create pull request
         id: cpr
         uses: peter-evans/create-pull-request@v5
